--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@
 
 }
 
+.sub-topic:hover{
+  scale: (1.2);
+}
 
 * {
   margin: 0;
@@ -16,7 +19,11 @@
   box-sizing: border-box;
 }
 
-/* Basic styling */
+main {
+  display: flex;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
@@ -193,7 +200,7 @@ nav ul li a, .dropdown-content a {
   padding: 1.25em;
   margin: 1em 0 0 0.7em;
   border-radius: 0.9375em;
-  box-shadow: 0 0.25em 0.375em rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.25em 0.375em rgba(0, 0, 0, 0.2);
   background-color: var(--contrast-color);
   color: var(--white);
   margin-bottom: 1.25em;
@@ -232,4 +239,31 @@ nav ul li a, .dropdown-content a {
   color: #8deeff; /* Change text color on hover */
   transform: scale(1.1); /* Scale effect on hover */
   box-shadow: 0 0.25em 0.375em rgba(0, 0, 0, 0.4);
+}
+
+/* Updated styling for main content */
+.content {
+  flex: 1; /* Take remaining space */
+  padding: 20px; /* Adjust padding as needed */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sidebar {
+  position: sticky;
+  top: 0;
+  height: 100vh; /* Adjust height as needed */
+  overflow-y: auto; /* Add scroll if content exceeds height */
+  padding-top: 20px;
+  animation: slideInFromLeft 0.5s ease-in-out forwards;
+}
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
