--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
   --contrast-color: #001c22;
   --light-color: #a2f1ff;
   --white : #F9F7F3;
+  --shadow : 0.5em 0.5em 1em rgba(0, 0, 0, 0.1);
+  --dark-shadow : 0.5em 0.5em 1em rgba(0, 0, 0, 0.2);
+  --shadow-footer: 0 -0.5em 1em rgba(0, 0, 0, 0.2);
 
 }
 
@@ -30,11 +33,21 @@ body {
   background-color: var(--main-color-20);
 }
 
-header, footer {
+header {
   background-color: #0288a0;
   color: var(--white);
   padding: 0.625em 0;
-  border-radius: 0 0 0.9375em 0.9375em;
+  border-radius: 0 0 0.7em 0.7em;
+}
+
+footer{
+  bottom: 0;
+  text-align: center;
+  background-color: #0288a0;
+  color: var(--white);
+  padding: 1em 0;
+  border-radius: 0.7em 0.7em 0 0;
+  box-shadow: var(--shadow-footer);
 }
 
 nav ul {
@@ -110,7 +123,7 @@ nav ul li a, .dropdown-content a {
   background-color: #0288a0d2;
   z-index: 1;
   border-radius: 0.3125em;
-  box-shadow: 0 0 0.3125em rgba(0, 0, 0, 0.2);
+  box-shadow: var(--shadow);
 }
 
 .sub-topic-container ul {
@@ -151,7 +164,7 @@ nav ul li a, .dropdown-content a {
 .exercise-correction {
   width: 100%;
 }
-
+/*Style de l'énoncé*/
 .exercise-statement {
   background-color: #004855d2;
   color: var(--white);
@@ -160,15 +173,15 @@ nav ul li a, .dropdown-content a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0 0 0.3125em rgba(0, 0, 0, 0.2);
+  box-shadow: var(--shadow);
   transition: transform 0.3s;
 }
 
 .exercise-statement:hover {
-  box-shadow: 0 0 0.3125em rgba(0, 0, 0, 0.4);
+  box-shadow: var(--dark-shadow);
   transform: scale(1.005);
 }
-
+/*Style de la partie correction*/
 .exercise-correction {
   background-color: #7bc51b62;
   padding: 0.625em;
@@ -188,19 +201,30 @@ nav ul li a, .dropdown-content a {
   cursor: pointer;
   font-size: 1.5em;
   outline: none;
+  transition: color 0.3s ease;
+}
+.toggle-correction:hover {
+  color: rgb(21, 179, 0);
 }
 
-/* Animation for unfolding correction */
+.toggle-correction:active {
+  animation: validation 0.3s ease;
+}
 
+@keyframes validation {
+  from { transform: scale(1); }
+  to { transform: scale(1.1); }
+}
 
 /* Menu des thème traitées dans le chapitre */
 
 .exercise-menu {
   width: 11em;
   padding: 1.25em;
+  text-align: center;
   margin: 1em 0 0 0.7em;
   border-radius: 0.9375em;
-  box-shadow: 0 0.25em 0.375em rgba(0, 0, 0, 0.2);
+  box-shadow: var(--shadow);
   background-color: var(--contrast-color);
   color: var(--white);
   margin-bottom: 1.25em;
@@ -238,7 +262,7 @@ nav ul li a, .dropdown-content a {
   background-color:var(--main-color-70); /* Change background color on hover */
   color: #8deeff; /* Change text color on hover */
   transform: scale(1.1); /* Scale effect on hover */
-  box-shadow: 0 0.25em 0.375em rgba(0, 0, 0, 0.4);
+  box-shadow: var(--shadow);
 }
 
 /* Updated styling for main content */
@@ -266,4 +290,21 @@ nav ul li a, .dropdown-content a {
   100% {
     transform: translateX(0);
   }
+}
+
+.page {
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  background-color: transparent;
+  border-radius: 0.8em;
+  box-shadow: var(--shadow);
+  margin-bottom: 1rem;
+}
+.section-content {
+  position: relative;
+  z-index: 1;
+  padding: 1em; /* Add padding to center content */
+  text-align: center; /* Center align text */
 }
