--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ main {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Cambria, sans-serif;
   line-height: 1.6;
   background-color: var(--main-color-20);
 }
@@ -65,11 +65,11 @@ nav ul li a,
 .dropdown {
   position: relative;
 }
-
+/* Le menu qui se déplie quand on survole l'onlet Exercices*/
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #0288a0d2;
+  background-color: var(--main-color);
   z-index: 1;
   border-radius: 0.3125em;
 }
@@ -112,11 +112,11 @@ nav ul li a,
   margin-bottom: 1.25em;
   border-radius: 0.625em;
 }
-
+/* Le sous menu dépliant dans exercice*/
 .sub-topic-container {
   display: none;
   position: absolute;
-  background-color: #0288a0d2;
+  background-color: var(--main-color);
   z-index: 1;
   border-radius: 0.3125em;
   box-shadow: var(--shadow);
@@ -141,11 +141,11 @@ nav ul li a,
   padding: 0.625em;
 }
 
-/* Début du style de l'exercice */
+/* Style du "grand" rectangle contenant l'exercice */
 .exercise {
   width: 75%;
   margin: 0 auto;
-  background-color: #0288a0d2;
+  background-color: var(--main-color);
   padding: 1.25em;
   margin-bottom: 1.25em;
   margin-top: 0.5em;
@@ -166,13 +166,15 @@ nav ul li a,
   background-color: #004855d2;
   color: var(--white);
   padding: 0.625em;
-  border-radius: 0.3125em;
+  border-radius: 0.3em;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-shadow: var(--shadow);
   transition: transform 0.3s;
+  margin: 2em 2em 0 auto;
 }
+
 
 .exercise-statement:hover {
   box-shadow: var(--dark-shadow);
@@ -308,6 +310,6 @@ nav ul li a,
 .section-content {
   position: relative;
   z-index: 1;
-  padding: 1em; /* Add padding to center content */
-  text-align: center; /* Center align text */
+  padding: 1em;
+  text-align: center;
 }
